jqm-model can now load adapters from property